@@ -4,6 +4,7 @@ ChangeLog
  * disassembler: fixes crash with nested sandbox
  * adds support for PHP_5_5
  * compatible with fcntl fork
+ * support for __FILE__ __DIR__ handling after files moved/hardlinked (without xcache.experimental)
 
 3.0.3 2013-16.18
 ========
